syntax = "proto3";

package proto;

option go_package = "github.com/superdev/ecommerce/gateway/proto";
import "common.proto"; // Import the common proto file to reference Empty message

service ProductService {
  rpc CheckProductAvailability (CheckProductRequest) returns (CheckProductResponse);
    rpc GetProduct(ProductRequest) returns (Product);
    rpc DeleteProduct(DeleteProductRequest) returns (Product);
    rpc ListProducts(Empty) returns (ProductListResponse);
    rpc CreateProduct(CreateProductRequest) returns (Product);
    rpc UpdateProduct(UpdateProductRequest) returns (Product);
}

message CheckProductRequest {
  int32 productId = 1;
  int32 quantity = 2;
}

message CheckProductResponse {
  bool available = 1;
}


message Product {
    int32 id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
    int32 available_quantity = 5;
}

message ProductListResponse {
    repeated Product products = 1;
}

message ProductRequest {
    int32 id = 1;
}

message DeleteProductRequest {
    int32 id = 1;
}

message CreateProductRequest {
    string name = 1;
    string description = 2;
    float price = 3;
    int32 available_quantity = 4;
}



message UpdateProductRequest {
    int32 id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
    int32 available_quantity = 5;
}